Table users{
  id int [pk, increment]
  email varchar(100) [unique]
  name varchar(100)
  password varchar(255)

}

Table categorias{
  id int [pk, increment]
  nombre varchar(100) [unique]
  tipo enum('ingreso', 'gasto')

}

Table movimientos{
  id int [pk, increment]
  categoria_id int [ref: > categorias.id]
  user_id int [ref: > users.id]
  tipo enum('ingreso', 'gasto')
  monto decimal(10,2)
  descripcion text
  foto varchar(255)
  fecha datetime

}
Table Presupuestos{
  id int [pk, increment]
  user_id int [ref: > users.id]
  categoria_id int [ref: > categorias.id]
  monto_asignado decimal(10,2)
  monto_gastado decimal(10,2)
  mes varchar(20)
  anio int

}
